fixed a spacing issue

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -1,7 +1,5 @@
-#content {min-height:500px;}
-.main {height:530px;}
 
-.foot {border-top:1px solid;height:200px;padding:5px;clear:both;}
+.foot {border-top:1px solid;padding:5px;clear:both;margin-top:20px;}
 .foot li a {color:#0066CC}
 .address {color:#0066CC}
 .whitespace {white-space:pre;}
